--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+  height: 100pc;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -7,7 +11,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: no-repeat linear-gradient(to bottom right, #003060 0%, #68bbe3 100%) !important;
-  height: 100pc;
 }
 
 #root {
@@ -17,4 +20,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@media only screen and (max-width: 991px) {
+html {
+  height: auto;
+  }
 }
